@@ -22,6 +22,7 @@ Changes Since 0.16
 
   - Explicit include test subdirectory contents in MANIFEST.in to avoid
     inclusion of test outputs.
+  - Fix [ 385 ]: Import of language modules.
 
 Release 0.16
 ============
